--- a/public/homepage_assets/css/style-rafi-2.css
+++ b/public/homepage_assets/css/style-rafi-2.css
@@ -9504,12 +9504,12 @@ a {
     -webkit-transition: 0.3s all ease;
     -o-transition: 0.3s all ease;
     transition: 0.3s all ease;
-    color: #fff900;
+    color: #febd3f;
 }
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #fff900;
+    color: #febd3f;
     outline: none !important;
 }
 
@@ -9571,7 +9571,7 @@ h5,
     opacity: 1 !important;
 }
 .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-    color: #fff;
+    color: #febd3f;
 }
 .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
@@ -9638,14 +9638,14 @@ h5,
     color: #fff;
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-    background: #fff900;
-    border: 1px solid #fff900;
+    background: #febd3f;
+    border: 1px solid #febd3f;
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
-    border-color: #fff900;
+    border-color: #febd3f;
 }
 .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #fff900;
+    color: #febd3f;
 }
 .ftco-navbar-light .navbar-toggler {
     border: none;
@@ -9667,11 +9667,11 @@ h5,
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 .ftco-navbar-light.scrolled .nav-item.active > a {
-    color: #fff900 !important;
+    color: #febd3f !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta > a {
     color: #fff !important;
-    background: #fff900;
+    background: #febd3f;
     border: none !important;
     padding-top: 0.5rem !important;
     padding-bottom: 0.5rem !important;
@@ -9688,7 +9688,7 @@ h5,
     color: #fff !important;
 }
 .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-    border-color: #fff900;
+    border-color: #febd3f;
 }
 @media (max-width: 991.98px) {
     .ftco-navbar-light.scrolled .navbar-nav {
@@ -9721,7 +9721,10 @@ h5,
     color: #000000 !important;
 }
 .ftco-navbar-light.scrolled .nav-link.active {
-    color: #fff900 !important;
+    color: #febd3f !important;
+}
+.ftco-navbar-light.scrolled .nav-link:hover {
+    color: #febd3f !important;
 }
 .ftco-navbar-light.scrolled.awake {
     margin-top: 0px;
@@ -10139,8 +10142,8 @@ h5,
     outline: none;
 }
 .btn.btn-primary {
-    background: #fff900;
-    border: 1px solid #fff900;
+    background: #febd3f;
+    border: 1px solid #febd3f;
     color: #fff;
 }
 .btn.btn-primary:hover {
@@ -10184,7 +10187,7 @@ h5,
 .btn.btn-white.btn-outline-white:active {
     background: #fff;
     border-color: #fff;
-    color: #fff900;
+    color: #febd3f;
 }
 
 .btn-custom {
@@ -10257,6 +10260,9 @@ h5,
     overflow: hidden;
 }
 .project img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -o-transform: scale(1);
@@ -10293,7 +10299,7 @@ h5,
     width: 80px;
     height: 80px;
     margin: 0 auto;
-    background: #fff900;
+    background: white;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
@@ -10309,7 +10315,7 @@ h5,
     opacity: 0;
 }
 .project .icon span {
-    color: #fff;
+    color: black;
     font-size: 30px;
 }
 .project:hover .text,
@@ -10320,8 +10326,8 @@ h5,
 .project:hover .icon,
 .project:focus .icon {
     opacity: 1;
-    width: 140px;
-    height: 140px;
+    width: 100px;
+    height: 100px;
 }
 .project:hover img,
 .project:focus img {
@@ -10334,20 +10340,16 @@ h5,
 .staff {
     position: relative;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 4px;
 }
 
 .staff .img {
-    width: 100%;
-    height: 480px;
+    width: 250px;
+    height: 300px;
     background-size: cover;
     background-position: center;
-    border-radius: 10px;
+    border-radius: 4px;
     transition: transform 0.5s ease;
-}
-
-.staff:hover .img {
-    transform: scale(1.1);
 }
 
 .staff .text h3 {
@@ -10359,20 +10361,6 @@ h5,
     color: #febd3f;
     display: block;
 }
-
-/* .staff .img {
-    height: 320px;
-}
-
-.staff .text h3 {
-    font-size: 20px;
-    margin-bottom: 0;
-}
-
-.staff .text .position {
-    color: #fff900;
-    display: block;
-} */
 
 .ftco-social {
     padding: 0;
