--- a/homepage_assets/css/style-rafi.css
+++ b/homepage_assets/css/style-rafi.css
@@ -9529,7 +9529,7 @@ h5,
 }
 
 .text-primary {
-    color: #fff900 !important;
+    color: #fddf32 !important;
 }
 
 .ftco-navbar-light {
@@ -9844,7 +9844,7 @@ h5,
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     margin-top: -10px;
-    color: #fff900 !important;
+    color: #fddf32 !important;
     -moz-transition: all 0.7s ease;
     -o-transition: all 0.7s ease;
     -webkit-transition: all 0.7s ease;
@@ -9987,7 +9987,7 @@ h5,
     content: "";
     width: 3px;
     height: 80px;
-    background: #fff900;
+    background: #fddf32;
 }
 .owl-carousel.home-slider .slider-item .slider-text h1 {
     font-size: 40px;
@@ -10120,7 +10120,7 @@ h5,
 }
 
 .bg-primary {
-    background: #fff900;
+    background: #fddf32;
 }
 
 .ftc-no-pb {
@@ -10147,18 +10147,18 @@ h5,
     color: #fff;
 }
 .btn.btn-primary:hover {
-    border: 1px solid #fff900;
+    border: 1px solid #fddf32;
     background: transparent;
-    color: #fff900;
+    color: #fddf32;
 }
 .btn.btn-primary.btn-outline-primary {
-    border: 1px solid #fff900;
+    border: 1px solid #fddf32;
     background: transparent;
-    color: #fff900;
+    color: #fddf32;
 }
 .btn.btn-primary.btn-outline-primary:hover {
     border: 1px solid transparent;
-    background: #fff900;
+    background: #fddf32;
     color: #fff;
 }
 .btn.btn-white {
@@ -10170,7 +10170,7 @@ h5,
 .btn.btn-white:focus,
 .btn.btn-white:active {
     border: 1px solid #fff;
-    color: #fff900;
+    color: #fddf32;
 }
 .btn.btn-white.btn-outline-white {
     border-color: rgba(255, 255, 255, 0.8);
@@ -10214,7 +10214,7 @@ h5,
     position: relative;
     width: 100px;
     height: 100px;
-    background: #fff900;
+    background: #fddf32;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -10410,7 +10410,7 @@ h5,
 .blog-entry .text .heading a:hover,
 .blog-entry .text .heading a:focus,
 .blog-entry .text .heading a:active {
-    color: #fff900;
+    color: #fddf32;
 }
 .blog-entry .text .meta-chat {
     color: #b3b3b3;
@@ -10449,7 +10449,7 @@ h5,
 }
 .block-27 ul li a,
 .block-27 ul li span {
-    border: 1px solid #fff900;
+    border: 1px solid #fddf32;
     text-align: center;
     display: inline-block;
     width: 40px;
@@ -10459,7 +10459,7 @@ h5,
 }
 .block-27 ul li.active a,
 .block-27 ul li.active span {
-    background: #fff900;
+    background: #fddf32;
     color: #fff;
     border: 1px solid transparent;
 }
@@ -10510,7 +10510,7 @@ textarea.form-control {
 }
 
 .bg-primary {
-    background: #fff900 !important;
+    background: #fddf32 !important;
 }
 
 .about-author .desc h3 {
@@ -10609,14 +10609,14 @@ textarea.form-control {
 }
 .footer-small-nav > li a:hover,
 .footer-small-nav > li a:focus {
-    color: #fff900;
+    color: #fddf32;
 }
 
 .media .ftco-icon {
     width: 100px;
 }
 .media .ftco-icon span {
-    color: #fff900;
+    color: #fddf32;
 }
 
 #map {
@@ -10689,7 +10689,7 @@ textarea.form-control {
     width: 100%;
     height: 1px;
     content: "";
-    background: #fff900;
+    background: #fddf32;
 }
 
 .heading-section.heading-section-white .subheading {
@@ -10793,7 +10793,7 @@ textarea.form-control {
     background: rgba(0, 0, 0, 0.2);
 }
 .testimony-section .owl-dots .owl-dot.active {
-    background: #fff900;
+    background: #fddf32;
 }
 
 .testimony-wrap {
@@ -10821,7 +10821,7 @@ textarea.form-control {
     border-radius: 50%;
 }
 .testimony-wrap .user-img .quote i {
-    color: #fff900;
+    color: #fddf32;
 }
 .testimony-wrap .name {
     font-weight: 400;
@@ -10846,7 +10846,7 @@ textarea.form-control {
     content: "";
     width: 3px;
     height: 30px;
-    background: #fff900;
+    background: #fddf32;
 }
 
 @media (max-width: 767.98px) {
@@ -10929,7 +10929,7 @@ textarea.form-control {
     display: block;
     font-size: 72px;
     font-weight: bold;
-    color: #fff900;
+    color: #fddf32;
 }
 .ftco-counter .ftco-label {
     font-size: 12px;
@@ -10991,7 +10991,7 @@ textarea.form-control {
 .block-21 .text .heading a:hover,
 .block-21 .text .heading a:active,
 .block-21 .text .heading a:focus {
-    color: #fff900;
+    color: #fddf32;
 }
 .block-21 .text .meta > div {
     display: inline-block;
@@ -11114,7 +11114,7 @@ textarea.form-control {
 }
 
 .subs-wrap {
-    background: #fff900 !important;
+    background: #fddf32 !important;
     display: block;
     width: 100%;
     color: rgba(255, 255, 255, 0.7);
